--- a/src/css/Schedule.css
+++ b/src/css/Schedule.css
@@ -1,36 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
-.container {
-    display: grid;
-    grid-template-columns: 250px minmax(10px, 1fr);
-    height: 100%;
-    background-color: #fafafb;
-}
-
-.rightContainer {
-    width: 100%;
-    background-color: #fafafb;
-    grid-column: 2;
-    min-height: 100vh;
-}
-
-.topMenu {
-    background-color: white;
-    position: sticky;
-    top: 0px;
-    height: 60px;
-    border-top: none;
-    border-right: none;
-    border-bottom: 1px solid #f0f0f0;
-    border-left: 1px solid #f0f0f0;
-    padding-left: 10px;
-}
-
-#content h3 {
-    margin-left: 15px;
-}
-
-
 .timelineRow {
     margin: 0px auto;
     width: 90%;
