--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
 .sidebar {
-    height: 100px;
-    width: 100%;
+    height: 100%;
+    width: 250px;
     background-color:white;
     position: sticky;
     top: 0;
@@ -9,6 +11,7 @@
     border-right:  1px solid #f0f0f0;
     border-bottom: none;
     border-left:   none;
+    font-family: Roboto;
 }
 
 .sidebarItems {
